--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<h1>Hi, I'm <strong>Wingman</strong>, <br />
+					your new generation <strong>healthcare assistant</strong>.</h1>
+					<p>Wingman enhances the experience of<br />
+					medical practitioners and patients with AI.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -34,13 +34,12 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Problem in Healthcare Management</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>Patients struggle with fragmented healthcare experiences due to difficulties in finding doctors, scheduling appointments, and accessing customer support. Meanwhile, healthcare providers face inefficiencies in managing schedules, analyzing feedback, and handling administrative tasks like paperwork and recruitment. These challenges lead to patient frustration, delayed care, and higher operational costs for clinics, which often require extra staff to manage these inefficiencies.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/part1.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
