--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Wingman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,9 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
+					<div class="col-6 col-12-medium imp-medium">
+						<span class="image fit"><img src="images/wingmanBGRemoved.png" alt="" /></span>
+					</div>
 					<h1>Hi, I'm <strong>Wingman</strong>, <br />
 					your new generation <strong>healthcare assistant</strong>.</h1>
 					<p>Wingman enhances the experience of<br />
