--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<div class="col-6 col-12-medium imp-medium">
+					<div class="col-6 col-12-medium">
 						<span class="image fit"><img src="images/wingmanBGRemoved.png" alt="" /></span>
 					</div>
 					<h1>Hi, I'm <strong>Wingman</strong>, <br />
@@ -52,23 +52,30 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
+							<span class="image fit"><img src="images/wingmanPart2.jpg" alt="" /></span>
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>Lorem ipsum dolor adipiscing<br />
 								amet dolor consequat</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<header class="Subtitle">
+								<h2>For Patients</h2>
+							</header>
+							<p><strong>Describe Your Symptoms</strong> Simply type your issue, and our AI gets to work.<br />
+								<strong>AI-Powered Matching</strong> Our intelligent AI agents analyze expertise, location, reviews, and comments to find the best doctor for you.<br/>
+								<strong>Real-Time Booking</strong> View available slots and book instantly. </br>
+								<strong>Secure & Hassle-Free</strong> 2FA ensures client information security, and AI-powered support helps with rescheduling or inquiries.</br>
+							</p>
+							<header class="Subtitle">
+								<h2>For Healtchare Providers</h2>
+							</header>
+							<p><strong>Clinic Insights & Competitive Analysis</strong> AI reviews patient feedback and market data to improve patient satisfaction.<br />
+								<strong>AI Assistant</strong> Manage schedules, reschedule, and automate communication with patients through our AI-driven system.<br/>
+								<strong>Recruiter Agent</strong> Streamline hiring by analyzing CVs.</br>
+								<strong>Paperwork Agent</strong> Automate legal and medical documentation.</br>
+								<strong>Purchasing Agent</strong> Track supplies, find discounts, and get restock notifications.</br>
+							</p>
 						</div>
 					</div>
 				</div>
