--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>How does Wingman work?</h2>
 							</header>
 							<header class="Subtitle">
 								<h2>For Patients</h2>
@@ -85,34 +84,19 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>The Team</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>Longstanding friendship - even overseas!</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
+							<span class="image fit"><img src="images/mertYigit.jpg" alt="" /></span>
+							<h3>Mert Cemri</h3>
+							<p>PhD student at UC Berkeley, BSc in Electrical and Electronics Engineering (EEE) from Bilkent University.</p>
+							<p>Strong background in AI, machine learning, and electrical engineering, with a deep understanding of cutting-edge technologies that power Wingman.</p>
+							<h3>Yigit Uz</h3>
+							<p>MSc student at Bilkent University-Computer Science, BSc in Electrical and Electronics Engineering (EEE) from Bilkent University.</p>
+							<p>Experienced in system design, algorithm development. Yigit also works as an algorithm development engineer in the systems engineering department at a private company, where he applies his expertise in algorithm development for complex systems.</p>
+						</div>						
 					</div>
 				</div>
 			</section>
