--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
 					</div>
 				</div>
 			</section>
+			
+		<!-- Revolutionizing Healthcare -->
+		<section id="one" class="main style1">
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
+							<h2>Problem in Healthcare Management</h2>
+						</header>
+						<p>Patients struggle with fragmented healthcare experiences due to difficulties in finding doctors, scheduling appointments, and accessing customer support. Meanwhile, healthcare providers face inefficiencies in managing schedules, analyzing feedback, and handling administrative tasks like paperwork and recruitment. These challenges lead to patient frustration, delayed care, and higher operational costs for clinics, which often require extra staff to manage these inefficiencies.</p>
+					</div>
+					<div class="col-6 col-12-medium imp-medium">
+						<span class="image fit"><img src="images/part1.jpg" alt="" /></span>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Three -->
 		<section id="three" class="main style1 special">
@@ -95,7 +112,7 @@
 					
 					<div class="col-4 col-12-medium">
 						<h1><strong>150-400 $/hour ...</strong></h1>
-						<p>... is spent for a <a href="https://www.physiciansidegigs.com/hourly-consulting-rate-for-physicians">medcial consultant</a>.</p>
+						<p>... is spent for a <a href="https://www.physiciansidegigs.com/hourly-consulting-rate-for-physicians">medical consultant</a>.</p>
 					</div>	
 				
 					<div class="col-4 col-12-medium">
@@ -113,8 +130,7 @@
 					<header class="major">
 						<h2>The Team</h2>
 					</header>					
-					<p>Longstanding friendship - even overseas!</p>
-					<span class="image fit"><img src="images/mertYigit.jpg"/></span>
+					<p>Longstanding friendship - even overseas!</p>					
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">							
 							<h3><strong>Mert Cemri</strong></h3>
@@ -127,6 +143,7 @@
 							<p>Experienced in system design, algorithm development. Yigit also works as an algorithm development engineer in the systems engineering department at a private company, where he applies his expertise in algorithm development for complex systems.</p>
 						</div>						
 					</div>
+					<span class="image fit"><img src="images/mertYigit.jpg"/></span>
 				</div>
 			</section>
 
@@ -450,7 +467,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
+		<!-- Footer 
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -463,7 +480,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
-
+		-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
