--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<div class="col-2 col-4">
-						<span class="image"><img src="images/wingmanBGRemoved.png" alt="" /></span>
-					</div>
+					<span class="image img"><img src="images/wingmanBGRemoved.png" alt="" /></span>
 					<h1>Hi, I'm <strong>Wingman</strong>, <br />
 					your new generation <strong>healthcare assistant</strong>.</h1>
 					<p>Wingman enhances the experience of<br />
