--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<p>By adopting Wingman, healthcare providers could potentially save up to $70,000 - $120,000 per year in staffing costs, depending on the size and scale of their practice, making Wingman an attractive, cost-effective solution.</p>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
-						<h1><strong>40,000-60,000 $ ...</strong></h1>
+						<h1><strong>40,000-60,000 $/year ...</strong></h1>
 						<p>... is spent for a full-time <a href="https://www.glassdoor.com/Salaries/medical-secretary-salary-SRCH_KO0,17.htm">medical secretary</a>.</p>
 					</div>		
 					
