paperwork agent reverb

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<p><strong>Clinic Insights & Competitive Analysis</strong> AI reviews patient feedback and market data to improve patient satisfaction.<br />
 								<strong>AI Assistant</strong> Manage schedules, reschedule, and automate communication with patients through our AI-driven system.<br/>
 								<strong>Recruiter Agent</strong> Streamline hiring by analyzing CVs.</br>
-								<strong>Paperwork Agent</strong> Automate legal and medical documentation.</br>
+								<strong>Paperwork Agent</strong> Automate legal and medical documentation and tracking.</br>
 								<strong>Purchasing Agent</strong> Track supplies, find discounts, and get restock notifications.</br>
 							</p>
 						</div>
