--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</section>
 
 		<!-- Four -->			
-			<section id="four" class="main style1 special">
+			<section id="four" class="main style2">
 				<div class="container">
 					<header class="major">
 						<h2>The Team</h2>
