--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p>Wingman enhances the experience of<br />
 					medical practitioners and patients with AI.</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="https://embed.figma.com/proto/bh7AmwIM1eWn3lC3nGfcGW/Wingman?node-id=18-26&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&embed-host=share" target="_blank" class="button scrolly">Discover Wingman</a></li>
 					</ul>
 				</div>
 			</section>
@@ -72,12 +72,11 @@
 								<strong>Recruiter Agent</strong> Streamline hiring by analyzing CVs.</br>
 								<strong>Paperwork Agent</strong> Automate legal and medical documentation and tracking.</br>
 								<strong>Purchasing Agent</strong> Track supplies, find discounts, and get restock notifications.</br>
-							</p>
+							</p>							
 						</div>
 					</div>
 				</div>
 			</section>
-			
 
 		<!-- Three -->
 		<section id="three" class="main style1 special">
